--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -42,7 +42,10 @@ bory{
 }
 
 body, input, button, textarea{
-    font: 500 1.6rem Poppins;
+    
+    font-weight: 500;
+    font-size: 1.6rem;
+    font-family: Poppins;
 }
 
 .container{
