--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -46,6 +46,7 @@ body, input, button, textarea{
     font-weight: 500;
     font-size: 1.6rem;
     font-family: Poppins;
+    color:var(--color-text-base);
 }
 
 .container{
