--- a/src/pages/TeacherList/styles.css
+++ b/src/pages/TeacherList/styles.css
@@ -3,48 +3,7 @@
     height: 100vh;
 }
 
-.page-header{
-    display: flex;
-    flex-direction: column;
-    background-color: var(--color-primary);
-}
 
-.page-header .top-bar-container{
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    color:var(--color-text-in-primary);
-    padding: 1.6rem 0;
-} 
-.page-header .top-bar-container a{
-    height: 3.2rem;
-    transition: opacity .3s;
-}
-.page-header .top-bar-container a:hover{
-    opacity: 0.6;
-}
-
-.page-header .top-bar-container > img{
-    height: 1.6rem;
-
-}
-
-.page-header .header-content{
-    width: 90%;
-    margin: 0 auto;
-    position: relative;
-    margin: 3.2rem auto;
-    
-}
-.page-header .header-content strong{
-    font-weight: 700;
-    font-size: 3.6rem;
-    font-family: Archivo;
-    line-height: 4.2rem;
-    color:var(--color-title-in-primary);
-}
 
 #search-teachers{
     margin-top: 3.2rem;
@@ -80,6 +39,7 @@
     padding: 0 1.6rem;
     font-size: 1.6rem;
     font-family: Archivo; 
+    box-shadow: 0px 4px 8px rgba(0,0,0,0.12);
 }
 
 #search-teachers .input-block:focus-within::after {
@@ -91,4 +51,37 @@
     left: 1.6rem;
     right: 1.6rem;
     bottom: 0;
+}
+#page-teacher-list main{
+    margin: 3.2rem auto;
+    width: 90%;
+
+}
+
+
+
+@media (min-width:700px){
+    #page-teacher-list{
+        max-width: 100vw;
+    }
+
+    #search-teachers{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 16px;
+        
+        position: absolute;
+        bottom: -28px;
+    }
+    #search-teachers .input-block + .input-block{
+        margin-top: 0;
+        
+    }
+
+    #page-teacher-list main{ 
+        padding: 3.2rem 0;
+        max-width: 740px;
+        margin: 0 auto;
+    }
+   
 }
