Terceiro dia da NLW

--- a/src/components/TeacherItem/styles.css
+++ b/src/components/TeacherItem/styles.css
@@ -63,7 +63,7 @@
 
 }
 
-.teacher-item footer button{
+.teacher-item footer a{
     width: 20rem;
     height: 5.6rem;
     background: var(--color-secundary);
@@ -76,11 +76,12 @@
     font-family:Archivo;
     display: flex;
     align-items: center;
+    text-decoration: none;
     justify-content: space-evenly;
     transition: background .3s;
 }
 
-.teacher-item footer button:hover{
+.teacher-item footer a:hover{
     background: var(--color-secundary-dark);
 }
 
@@ -106,7 +107,7 @@
         font-size: 1.6rem;
         justify-content: center;
     }
-    .teacher-item footer button img{
+    .teacher-item footer a img{
         margin-right: 1.6rem;
     }
 }
