--- a/src/components/PageHeader/styles.css
+++ b/src/components/PageHeader/styles.css
@@ -6,6 +6,7 @@
 
 .page-header .top-bar-container{
     width: 90%;
+    
     margin: 0 auto;
     display: flex;
     justify-content:space-between;
@@ -39,6 +40,14 @@
     font-family: Archivo;
     line-height: 4.2rem;
     color:var(--color-title-in-primary);
+    margin-top: rem;
+}
+
+.page-header .header-content p{
+   min-width: 30rem;
+   font-size: 1.6rem;
+   line-height: 2.6rem;
+   color:var(--color-text-in-primary);
 }
 
 @media(min-width:700px){
