--- a/src/pages/TeacherList/styles.css
+++ b/src/pages/TeacherList/styles.css
@@ -14,48 +14,24 @@
 
 }
 
-#search-teachers .input-block{
-    position: relative;
-}
-
-#search-teachers .input-block + .input-block{
-    margin-top: 1.4rem;
-
-}
-
-
-#search-teachers .input-block label{
-    font-size: 1.4rem;
-}
-
-#search-teachers .input-block input{
-    width: 100%;
-    height: 5.6rem;
-    margin-top: 0.8rem;
-    border-radius: 0.8rem;
-    background: var(--color-input-background);
-    border: 1px solid var(--color-line-in-white);
-    outline: 0;
-    padding: 0 1.6rem;
-    font-size: 1.6rem;
-    font-family: Archivo; 
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.12);
-}
-
-#search-teachers .input-block:focus-within::after {
-    width: calc(100% - 3.2rem);
-    height: 2px;
-    content: '';
-    background:var(--color-primary-light);
-    position: absolute;
-    left: 1.6rem;
-    right: 1.6rem;
-    bottom: 0;
-}
 #page-teacher-list main{
     margin: 3.2rem auto;
     width: 90%;
 
+}
+#search-teachers button{
+    background: none;
+    border: none;
+    color:var(--color-primary);
+    font-weight: 700;
+    font-size: 1.6rem;
+    font-family: Archivo;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+#search-teachers button:hover{
+    color:var(--color-primary-dark);
 }
 
 
@@ -67,13 +43,14 @@
 
     #search-teachers{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         column-gap: 16px;
         
         position: absolute;
         bottom: -28px;
     }
-    #search-teachers .input-block + .input-block{
+    #search-teachers .input-block + .input-block,
+    #search-teachers .select-block + .select-block{
         margin-top: 0;
         
     }
